--- a/clone.html
+++ b/clone.html
@@ -71,6 +71,15 @@
                 class="dropdown-toggle">2</span></div>
         <button type="button" class="btn" id="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Add to
             Cart</button>
+         <div class="tab-menu">
+            <img src="img13.jpg" id="display">
+            <h2 id="name">Song Kyo</h2>
+            <div class="rating">9/<span id="ten">10</span></div>
+            <h1 class="blade">Good Blade for Precise Cutting</h1>
+            <p id="para">Capable of mincing, peeling and cutting, these household <br>knifes are for both professional
+                chefs.
+                The reader will be <br>distracted by the readable content on the page.</p>
+        </div>
     </div>
 </body>
 
